--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
                 </div> <!-- feature images -->
              </div> <!-- feature-container end -->
         </section> <!-- feature  -->
+
+        <section> <!-- hot deal -->
+         <div class="hot-deal">
+            <div class="hot-deal-info">
+              <h1 class="hot-deal-title">Hot Deal ! Sale Up To 25% <span style="color:#E55473" >Off</span> </h1>
+              <p class="hot-deal-para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <button class="btn">Sign Up</button>
+            </div>  <!-- hot-deal-info -->
+            
+            <div class="hot-deal-img">
+                <img src="./images/pngwing 8.png" alt="">
+            </div>
+
+         </div> <!-- hot-deal end -->
+        </section> <!-- hot deal end  -->
+
+        <section>  <!-- instagram section -->
+            <div class="instagram-container">
+                <h1 class="instagram-title" >Instagram</h1>
+                <p class="instagram-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <div class="instagram-image">
+                    <img src="./images/instagram1.png" alt="">
+                    <img src="./images/instagram4.png" alt="">
+                    <img src="./images/instagram3.png" alt="">
+                    <img src="./images/instagram2.png" alt="">
+
+                </div>
+                
+            </div> <!-- instagram container end -->
+        </section> <!-- instagram section -->
     </main>
 </body>
 </html>
