--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- feature  -->
         <section>
              <div class="feature-container">
-                <h1 class="feature-title">Our Featured Flowers</h1>
+                <h1 class="title">Our Featured Flowers</h1>
                 <p class="feature-para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
               
                 <div class="feature-images">
@@ -75,7 +75,7 @@
 
         <section>  <!-- instagram section -->
             <div class="instagram-container">
-                <h1 class="instagram-title" >Instagram</h1>
+                <h1 class="title" >Instagram</h1>
                 <p class="instagram-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <div class="instagram-image">
                     <img src="./images/instagram1.png" alt="">
@@ -87,6 +87,16 @@
                 
             </div> <!-- instagram container end -->
         </section> <!-- instagram section -->
+
+        <section> <!-- get latest section -->
+            <div class="latest">
+                    <h1 class="latest-title">Get The Latest Deals</h1>
+                    <p class="latest-para">$30 coupon for first shopping</p>
+               <input type="text" placeholder="  Enter your email here....">
+               <button class="btn">Subscribe </button>
+
+            </div> <!-- latest end-->
+        </section> <!-- get latest section -->
     </main>
 </body>
 </html>
