--- a/index.html
+++ b/index.html
@@ -78,10 +78,18 @@
                 <h1 class="title" >Instagram</h1>
                 <p class="instagram-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <div class="instagram-image">
-                    <img src="./images/instagram1.png" alt="">
-                    <img src="./images/instagram4.png" alt="">
-                    <img src="./images/instagram3.png" alt="">
-                    <img src="./images/instagram2.png" alt="">
+                    <div class="insta-img">
+                        <img src="./images/instagram1.png" alt="" width="100%">
+                    </div>
+                    <div class="insta-img">
+                        <img src="./images/instagram4.png" alt="" width="100%">
+                    </div>
+                    <div class="insta-img">
+                        <img src="./images/instagram3.png" alt="" width="100%">
+                    </div>
+                    <div class="insta-img">
+                        <img src="./images/instagram2.png" alt="" width="100%">
+                    </div>
 
                 </div>
                 
