--- a/index.html
+++ b/index.html
@@ -106,5 +106,12 @@
             </div> <!-- latest end-->
         </section> <!-- get latest section -->
     </main>
+
+    <footer class="footer">
+            <h1 class="footer-title"> <span style="color: #E55473;">Flower</span>Shop</h1>
+            <small  class="footer-para">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</small>
+            <p class="footer-copyright"> &copy 2020-2023, FlowerShop.com. All rights reserved. </p>
+        
+    </footer>
 </body>
 </html>
