add review section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,69 @@
 
             </div> <!-- latest end-->
         </section> <!-- get latest section -->
+        
+        <section>
+            <div class="review">
+                    <h1 class="review-title">Customer's <span style="color: #E55473;">Review</span></h1>
+                <div class="box-container">
+                    <div class="box">
+                        <div class="rate">
+                        <p><span style="color: #E55473;">Rate : </span> 4.5 </p>
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        </div>
+                        <p class="user-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, harum? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, quam!</p>
+                        <div class="customer">
+                            <img src="./images/review1.jpg" alt="" class="customer-img">
+                            <div class="customer-info">
+                                <h4>Sumaiya Meem</h4>
+                                <p>Barishal, Bangladesh</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="rate">
+                        <p><span style="color: #E55473;">Rate : </span> 3.9 </p>
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px" class="star-icon">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        </div>
+                        <p class="user-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, harum? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, quam!</p>
+                        <div class="customer">
+                            <img src="./images/review1.jpg" alt="" class="customer-img">
+                            <div class="customer-info">
+                                <h4>Farhan Sakib</h4>
+                                <p>Dhaka, Bangladesh</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="rate">
+                        <p><span style="color: #E55473;">Rate : </span> 4 </p>
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+
+                        </div>
+                        <p class="user-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, harum? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, quam!</p>
+                        <div class="customer">
+                            <img src="./images/review1.jpg" alt="" class="customer-img">
+                            <div class="customer-info">
+                                <h4>Rumi Akter</h4>
+                                <p>Chittagonj, Bangladesh</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div><!-- box container end -->
+                
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
