--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="box-container">
                     <div class="box">
                         <div class="rate">
-                        <p><span style="color: #E55473;">Rate : </span> 4.5 </p>
+                        <p class="rate-info"><span style="color: #E55473;">Rate : </span> 4.5 </p>
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
