--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="box">
                         <div class="rate">
                         <p class="rate-info"><span style="color: #E55473;">Rate : </span> 4.5 </p>
-                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px" class="star-icon">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
@@ -129,8 +129,8 @@
                     </div>
                     <div class="box">
                         <div class="rate">
-                        <p><span style="color: #E55473;">Rate : </span> 3.9 </p>
-                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px" class="star-icon">
+                        <p class="rate-info"><span style="color: #E55473;">Rate : </span> 3.9 </p>
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px" class="star-icon" class="star-icon">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         </div>
@@ -145,9 +145,8 @@
                     </div>
                     <div class="box">
                         <div class="rate">
-                        <p><span style="color: #E55473;">Rate : </span> 4 </p>
-                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
-                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
+                        <p class="rate-info"><span style="color: #E55473;">Rate : </span> 4 </p>
+                        <img src="./images/star-regular.svg" alt="" width="25px" height="25px" class="star-icon">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
                         <img src="./images/star-regular.svg" alt="" width="25px" height="25px">
